# robotcloud

./: .env.example  .gitignore  .gitmodules  AGENTS.md  Makefile  TODO.md  pyproject.toml
.conductor/: settings.yaml
backend/: __init__.py  db.sqlite3  manage.py  nginx_conf  pyproject.toml  requirements-dev.txt
backend/app/: database.py  invitation_codes.json  main.py
backend/fastapi/: __init__.py
backend/gpu_agent/: __init__.py  __main__.py  agent.py  config.py
backend/robotcloud_backend/: __init__.py  asgi.py  build_info.py  middleware.py  settings.py  sms.py  urls.py  wsgi.py
backend/robotcloud_backend/api/: __init__.py  admin.py  apps.py  limits.py  models.py  scheduler.py  services.py  urls.py  views.py
backend/robotcloud_backend/api/management/commands/: check_expired_subscriptions.py  run_scheduler.py
backend/robotcloud_backend/api/migrations/: 0001_initial.py  0002_create_admin.py  0003_alter_invitationcode_assigned_phone_alter_user_phone.py  0004_workernode_traintask_assigned_gpus_and_more.py  0005_fix_missing_workernode_api_port.py  0006_dataset_metadata.py  0007_payment.py  0008_create_django_superuser.py  0009_delete_invitationcode.py  0010_inference_fields_and_train_checkpoint.py  0011_inference_dataset_nullable.py  0012_remove_seeded_api_admin.py  0013_agent_direct_upload.py  0014_authtoken.py  0014_user_session.py  0015_usersession_api_userses_token_h_226657_idx.py  0016_workernode_gpu_slots.py  0017_traintask_job_name.py  0018_usersession_browser_device_type.py  __init__.py
backend/robotcloud_backend/payment/: __init__.py  alipay.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_dataset.py  test_gpu_agent.py  test_inference.py  test_model.py  test_payment.py  test_scheduler.py  test_simulation.py  test_training.py  test_training_delete.py  test_user.py
backend/tools/: invite_codes.py
claw/arch/: deployment-architecture.md
claw/develop/: onboard-ssh-only-gpu-node.md
claw/issues/: desktop-so101-local-only-entrypoint.md
claw/sop/: deploy-to-volc.md
design/: RobotCloud_PRD.md
desktop/: .gitignore  README.md  package.json  pnpm-lock.yaml
desktop/scripts/: bridge-smoke-server.mjs  build-lerobot-runtime-mac.sh  build-lerobot-runtime-windows.ps1  build-robot-service.ps1  build-robot-service.sh  build-windows.ps1  package-linux.sh  package-macos.sh  prepare-frontend-dist.mjs
desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.dev.conf.json
desktop/src-tauri/capabilities/: desktop-dev.json  desktop.json
desktop/src-tauri/permissions/: desktop-bridge.toml
desktop/src-tauri/placeholder/: index.html
desktop/src-tauri/resources/runtime/: README.md
desktop/src-tauri/resources/scripts/: robotcloud_auto_record.py  robotcloud_draw_circle.py  robotcloud_reset_pose.py  robotcloud_save_pose.py  so101.ps1  so101.sh
desktop/src-tauri/src/: lib.rs  main.rs
docs/: RobotCloud_AMD_Tunnel_Deployment.md  RobotCloud_API_Database_Doc.md  RobotCloud_Data_Management.md  RobotCloud_FE_Design.md  RobotCloud_PRD.md  RobotCloud_Scheduler_Design.md  SO101_Command_Line_Cheatsheet.md  SO101_Command_Line_Cheatsheet_Windows_PowerShell.md
frontend/: README.md  jest.config.ts  jest.setup.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/__tests__/: api.test.ts  appChrome.test.tsx  datasets.page.test.tsx  desktopNavigation.test.ts  home.page.test.tsx  login.page.test.tsx  (+5 more)
gpu_node/: .gitignore  README.md  __init__.py  __main__.py  agent.py  config.py  pyproject.toml  requirements.txt
gpu_node/tests/: test_gpu_node.py
scripts/: build_and_deploy.sh  configure_domain_proxy.sh  desktop-build-and-install.bat  desktop-build-and-install.sh  http2https-prod.sh  install_lerobot.cmd  install_lerobot.sh  kill_port.sh  lerobot-infer.sh  lerobot-train.sh  lerobot.sh  setup_nginx.sh  start-nginx.sh
(+60 files in other folders)
