[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robotcloud-backend"
version = "0.1.0"
description = "In-memory backend implementation for RobotCloud"
authors = [
    { name = "RobotCloud Contributors" }
]
requires-python = ">=3.9"
dependencies = [
    "Django>=4.2,<5.0",
    "djangorestframework>=3.14",
    "psycopg2-binary>=2.9",
    "django-redis>=5.3",
    "python-dotenv>=1.0",
    "django-cors-headers>=4.3",
    "requests>=2.31",
    "whitenoise>=6.6",
    "python-alipay-sdk>=3.0",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = [
    "robotcloud_backend",
    "robotcloud_backend.api",
    "robotcloud_backend.api.migrations",
    "gpu_agent",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4",
    "pytest-django>=4.5",
]
