[package]
name = "robotcloud-tauri"
version = "0.2.0"
description = "RobotCloud Tauri desktop shell"
authors = ["LoveMoon AI"]
edition = "2021"

[lib]
name = "robotcloud_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "robotcloud"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
url = "2"
uuid = { version = "1", features = ["v4"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
